edited social media links

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
    <!--- basic page needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>Kards</title>
+	<title>Blanchette UX</title>
 	<meta name="description" content="">  
 	<meta name="author" content="">
 
@@ -53,8 +53,7 @@
 						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
-						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>	
-						<li><a href="styles.html" title="">Style Demo</a></li>				
+						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
 					</ul>
 				</nav>    		
    		</div> <!-- /top-bar --> 
@@ -89,12 +88,12 @@
    		</div>   		 		
    	</div> <!-- /intro-content --> 
 
-   	<ul class="intro-social">        
-         <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-         <li><a href="#"><i class="fa fa-behance"></i></a></li>
-         <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-         <li><a href="#"><i class="fa fa-dribbble"></i></a></li>
-         <li><a href="#"><i class="fa fa-instagram"></i></a></li>
+   	<ul class="intro-social">
+		 <li><a href="https://www.instagram.com/thomasblanchette4/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a></li>
+         <li><a href="https://twitter.com/BlanchetteUX"><i class="fa fa-twitter" target="_blank"></i></a></li>
+		 <li><a href="https://www.linkedin.com/in/thomasblanchette4/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
+         <li><a href="https://dribbble.com/BlanchetteUX" target="_blank"><i class="fa fa-dribbble"></i></a></li>
+		 <li><a href="https://github.com/BlanchetteUX" target="_blank"><i class="fa fa-github"></i></a></li>
       </ul> <!-- /intro-social -->      	
 
    </section> <!-- /intro -->
@@ -107,7 +106,7 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>About</h5>
+   			<h5>About Me</h5>
    			<h1>Let me introduce myself.</h1>
 
    			<div class="intro-info">
@@ -190,7 +189,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="#" title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="files/blanchetteux_cv.docx" download="files/blanchetteux_cv.docx"title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
