--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
 		   	<nav id="main-nav-wrap">
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll"  href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll"  href="#about" title="">About</a></li>
-						<li><a class="smoothscroll"  href="#resume" title="">Resume</a></li>
+						<li><a class="smoothscroll"  href="#about" title="">Persona</a></li>
+						<li><a class="smoothscroll"  href="#resume" title="">Experience Map</a></li>
 						<li><a class="smoothscroll"  href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll"  href="#services" title="">Services</a></li>					
 						<li><a class="smoothscroll"  href="#contact" title="">Contact</a></li>
@@ -90,7 +90,7 @@
 
    	<ul class="intro-social">
 		 <li><a href="https://www.instagram.com/thomasblanchette4/?hl=en" target="_blank"><i class="fa fa-instagram"></i></a></li>
-         <li><a href="https://twitter.com/BlanchetteUX"><i class="fa fa-twitter" target="_blank"></i></a></li>
+         <li><a href="https://twitter.com/BlanchetteUX" target="_blank"><i class="fa fa-twitter"></i></a></li>
 		 <li><a href="https://www.linkedin.com/in/thomasblanchette4/" target="_blank"><i class="fa fa-linkedin"></i></a></li>
          <li><a href="https://dribbble.com/BlanchetteUX" target="_blank"><i class="fa fa-dribbble"></i></a></li>
 		 <li><a href="https://github.com/BlanchetteUX" target="_blank"><i class="fa fa-github"></i></a></li>
@@ -106,7 +106,7 @@
    	<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>About Me</h5>
+   			<h5>Persona</h5>
    			<h1>Let me introduce myself.</h1>
 
    			<div class="intro-info">
@@ -160,24 +160,24 @@
 				<ul class="skill-bars">
 				   <li>
 				   	<div class="progress percent90"><span>90%</span></div>
-				   	<strong>HTML5</strong>
+				   	<strong>Adobe Illustrator</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent85"><span>85%</span></div>
-				   	<strong>CSS3</strong>
+				   	<strong>Adobe Photoshop</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent70"><span>70%</span></div>
-				   	<strong>JQuery</strong>
+				   	<strong>Adobe InDesign</strong>
 				   </li>
 				   <li>
 				   	<div class="progress percent95"><span>95%</span></div>
-				   	<strong>PHP</strong>
+				   	<strong>HTML5 & CSS3</strong>
 				   </li>
 				   <li>
 
 				   	<div class="progress percent75"><span>75%</span></div>
-				   	<strong>Wordpress</strong>
+				   	<strong>Node.js</strong>
 				   </li>
       
 				</ul> <!-- /skill-bars -->		
@@ -203,10 +203,13 @@
 		<div class="row section-intro">
    		<div class="col-twelve">
 
-   			<h5>Resume</h5>
+   			<h5>Experience Map</h5>
    			<h1>More of my credentials.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">
+				I am a second year student at Wilfrid Laurier Univerty majoring in User Experince Design [Honors B.Des], with a minor in Psychology.
+				I am the sitting Vice-President of the User Experience Design Students Association.
+			</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -226,17 +229,17 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>UI Designer</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Camp Counselor</h3>
+	   					<p>Summer 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Awesome Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
+	   					<h4>University of Waterloo Engineering Outreach</h4>
+	   					<p>Taught basic Photoshop and Arduino programming to children aged 11-13.</p>
 	   				</div>
 
 	   			</div> <!-- /timeline-block -->
@@ -244,36 +247,36 @@
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Front-end Developer</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Logo Designer</h3>
+	   					<p>2016</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Super Cool Agency</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   					<h4>Waterloo Regional District School Board</h4>
+						<p>Designed Logo for the student council at Waterloo Collegiate Institute for the 2016-17 school year.</p>
+					</div>
 
 	   			</div> <!-- /timeline-block -->
 
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-graduation-cap"></i>
+	   					<i class="fa fa-briefcase"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Web Designer</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>Tech Director</h3>
+	   					<p>2013 - 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Great Designs Studio</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   					<h4>Waterloo Regional District School Board</h4>
+	   					<p>Did Audio/Visual tech for presentation and performances at Waterloo Collegiate Institute.
+					</div>
 
 	   			</div> <!-- /timeline-block -->
 
@@ -298,54 +301,54 @@
    				<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Master Degree</h3>
-	   					<p>July 2015 - Present</p>
+	   					<h3>Honors B.Des</h3>
+	   					<p>2017 - 2021</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>University of Life</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi.</p>
-	   				</div>
+	   					<h4>Wilfrid Laurier University</h4>
+						<p>Learnt UX.</p>
+					</div>
 
 	   			</div> <!-- /timeline-block -->
 
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>July 2014 - June 2015</p>
+	   					<h3>Diploma</h3>
+	   					<p>2017 - 2018</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>State Design University</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   					<h4>Conestoga College</h4>
+						<p>Learnt some other things here too!</p>
+					</div>
 
 	   			</div> <!-- /timeline-block -->
 
 	   			<div class="timeline-block">
 
 	   				<div class="timeline-ico">
-	   					<i class="fa fa-briefcase"></i>
+	   					<i class="fa fa-graduation-cap"></i>
 	   				</div>
 
 	   				<div class="timeline-header">
-	   					<h3>Bachelor Degree</h3>
-	   					<p>May 2013 - June 2014</p>
+	   					<h3>HighSchool Diploma</h3>
+	   					<p>2012 - 2017</p>
 	   				</div>
 
 	   				<div class="timeline-content">
-	   					<h4>Design College</h4>
-	   					<p>Lorem ipsum Occaecat do esse ex et dolor culpa nisi ex in magna consectetur nisi cupidatat laboris esse eiusmod deserunt aute do quis velit esse sed Ut proident cupidatat nulla esse cillum laborum occaecat nostrud sit dolor incididunt amet est occaecat nisi incididunt.</p>
-	   				</div>
+	   					<h4>Waterloo Collegiate Institute</h4>
+						<p>Ontario Scholar & SHSM Student. Got 90s in the arts and 70s in the rest.</p>
+					</div>
 
 	   			</div> <!-- /timeline-block -->
 
