Fixed location error in personal bio

--- a/index.html
+++ b/index.html
@@ -113,8 +113,11 @@
 
    				<img src="images/profile-pic.jpg" alt="Profile Picture">
 
-   				<p class="lead">Lorem ipsum Exercitation culpa qui dolor consequat exercitation fugiat laborum ex ea eiusmod ad do aliqua occaecat nisi ad irure sunt id pariatur Duis laboris amet exercitation veniam labore consectetur ea id quis eiusmod.</p>
-   			</div>   			
+   				<p class="lead">I am a second year student at Wilfrid Laurier Univerty majoring in User Experince Design [Honors B.Des], with a minor in Psychology.
+					I am the sitting Vice-President of the User Experience Design Students Association.
+				</p>
+
+			</div>
 
    		</div>   		
    	</div> <!-- /section-intro -->
@@ -207,8 +210,6 @@
    			<h1>More of my credentials.</h1>
 
    			<p class="lead">
-				I am a second year student at Wilfrid Laurier Univerty majoring in User Experince Design [Honors B.Des], with a minor in Psychology.
-				I am the sitting Vice-President of the User Experience Design Students Association.
 			</p>
 
    		</div>   		
