--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+			<p>My design style persists of minimalistic, flat, and modern design approaches.</p>
 
    			<ul class="info-list">
    				<li>
@@ -192,7 +192,7 @@
    	<div class="row button-section">
    		<div class="col-twelve">
    			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-   			<a href="files/blanchetteux_cv.docx" download="files/blanchetteux_cv.docx"title="Download CV" class="button button-primary">Download CV</a>
+   			<a href="files/blanchetteux_cv.docx" download="files/blanchetteux_cv.docx" title="Download CV" class="button button-primary">Download CV</a>
    		</div>   		
    	</div>
 
@@ -418,7 +418,7 @@
 
 	            <div class="bgrid folio-item">
 	               <div class="item-wrap">
-	               	<img src="images/portfolio/clouds.jpg"alt="Clouds">
+	               	<img src="images/portfolio/clouds.jpg" alt="Clouds">
 	                  <a href="#modal-03" class="overlay">             		                  
 	                     <div class="folio-item-table">
 	                     	<div class="folio-item-cell">
