contact info interactive email & phone

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
    			<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 	   		<div class="logo">
-		         <a href="index.html">KARDS</a>
+		         <a href="index.html">Quick Links</a>
 		      </div>		      
 
 		   	<nav id="main-nav-wrap">
@@ -127,7 +127,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Profile</h3>
-			<p>My design style persists of minimalistic, flat, and modern design approaches.</p>
+			<p>My design style persists of minimalistic, flat, and modern design approaches.</p><br>
 
    			<ul class="info-list">
    				<li>
@@ -158,7 +158,7 @@
    		<div class="col-six tab-full">
 
    			<h3>Skills</h3>
-   			<p>Lorem ipsum Qui veniam ut consequat ex ullamco nulla in non ut esse in magna sint minim officia consectetur nisi commodo ea magna pariatur nisi cillum.</p>
+			<p>Through various leadership experiences I have developed my interpersonal skills, alongside my design skills listed below.</p>
 
 				<ul class="skill-bars">
 				   <li>
@@ -210,7 +210,7 @@
    			<h1>More of my credentials.</h1>
 
    			<p class="lead">
-			</p>
+				These past employment opportunities have helped me develop my collaborative skills, and demonstrated my time management skills.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -943,13 +943,13 @@
    				<i class="icon-pin"></i>
    			</div>
 
-   			<h5>Where to find me</h5>
+   			<h5>Snail Mail</h5>
 
-   			<p>
-            1600 Amphitheatre Parkway<br>
-            Mountain View, CA<br>
-            94043 US
-            </p>
+   			<p><a class="grey-link" href="https://goo.gl/maps/fTqSyJaBbf72" target="_blank">
+            1 Darling<br>
+            Brantford, ON<br>
+            N3T 2J8
+			</a></p>
 
    		</div>
 
@@ -959,11 +959,11 @@
    				<i class="icon-mail"></i>
    			</div>
 
-   			<h5>Email Me At</h5>
+   			<h5>Email</h5>
 
-   			<p>someone@kardswebsite.com<br>
-			   	info@kardswebsite.com			     
-			   </p>
+			<p><a class="grey-link" href="mailto:thomas@blanchetteux.com">thomas@blanchetteux.com</a><br>
+				<a class="grey-link" href="mailto:business@blanchetteux.com">business@blanchetteux.com</a>
+			</p>
 
    		</div>
 
@@ -973,12 +973,11 @@
    				<i class="icon-phone"></i>
    			</div>
 
-   			<h5>Call Me At</h5>
+   			<h5>Mobile</h5>
 
-   			<p>Phone: (+63) 555 1212<br>
-			   	Mobile: (+63) 555 0100<br>
-			     	Fax: (+63) 555 0101
-			   </p>
+			<p><a class="grey-link" href="tel:819628376">Call: +1 (819) 692-8376</a><br>
+				<a class="grey-link" href="sms:8196928376">Text: +1 (819) 692-8376</a>
+			</p>
 
    		</div>
    		
