--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
    			<h5>Portfolio</h5>
    			<h1>Check Out Some of My Works.</h1>
 
-   			<p class="lead">Lorem ipsum Do commodo in proident enim in dolor cupidatat adipisicing dolore officia nisi aliqua incididunt Ut veniam lorem ipsum Consectetur ut in in eu do.</p>
+   			<p class="lead">Successes and failures; each have taught me something new.</p>
 
    		</div>   		
    	</div> <!-- /section-intro--> 
@@ -866,7 +866,7 @@
    		<div class="col-twelve">
 
             <!-- form -->
-            <form name="contactForm" id="contactForm" method="post" action="">
+            <form name="contactForm" id="contactForm" method="post" action="get">
       			<fieldset>
 
                   <div class="form-field">
