--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
    			<h5>Services</h5>
    			<h1>What Can I Do For You?</h1>
 
-   			<p class="lead">Not sure how I can be of use to you or your team? Hereare some examples:</p>
+   			<p class="lead">Not sure how I can be of use to you or your team? Here are some examples:</p>
 
    		</div>   		
    	</div> <!-- /section-intro -->
@@ -644,7 +644,7 @@
 
 	            	 <h3>Web Design</h3>
 
-		            <p class="desc">Designing, building, and maintaing websites for you or your company. Working with you every step of the way to ensure it's everything you're looking for.</p>
+		            <p class="desc">Designing, building, and maintaining websites for you or your company. Working with you every step of the way to ensure it's everything you're looking for.</p>
 	         		
 	         	</div> 	         	 
 
@@ -672,7 +672,7 @@
 
 	            	<h3>UI/UX Design</h3>
 
-					<p class="desc">Specializing in User Reasearch and Testing. I can ensure that your solution not only meets, but exceeds users needs and expectations.</p>
+					<p class="desc">Specializing in User Research and Testing. I can ensure that your solution not only meets, but exceeds users needs and expectations.</p>
 	         		
 	            </div>
 			</div> <!-- /service -->
@@ -716,7 +716,7 @@
 						</div>
 
 						<h3 class="stat-count">
-							100000000
+							1000000
 						</h3>
 
 						<h5 class="stat-title">
