--- a/index.html
+++ b/index.html
@@ -424,7 +424,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Clouds</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Design
+		     					       	  UI/UX Design
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -490,8 +490,7 @@
 
 					   <div class="description-box">
 					      <h4>Liberty</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
+						   <p>I designed a web service for prospective immigrants and refugees to be able to access and understand what they need to do to receive an american citizenship; as well as what safety risks they may have due to current political climate.</p>
 					      <div class="categories">Web Development</div>			               
 					   </div>
 
@@ -510,7 +509,7 @@
 
 					   <div class="description-box">
 					      <h4>Shutterbug</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+						   <p>This photographer had wanted a no-maintenance website where they could upload their photos to share.</p>
 
 					      <div class="categories">Web Design</div>			               
 					   </div>
@@ -529,10 +528,10 @@
 				     	</div>      	
 
 					   <div class="description-box">
-					      <h4>Clouds</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+					      <h4>Clouds</h4>
+						   <p>The client had users who needed a more secure, and friendly way to use cloud storage. Through card sorting and rapid prototyping I created a soluti8on that the client and the users loved</p>
 
-					      <div class="categories">Web Design</div>			               
+					      <div class="categories">UI/UX Design</div>
 					   </div>
 
 			         <div class="link-box">
@@ -550,7 +549,7 @@
 
 					   <div class="description-box">
 					      <h4>Beetle</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+						   <p>Provided this client with a logo, and a branding guideline for any new designer they hire. This ensures that no time is wasted because a design doesn't match the current design work.</p>
 
 					      <div class="categories">Branding</div>			               
 					   </div>
@@ -570,9 +569,9 @@
 
 					   <div class="description-box">
 					      <h4>Lighthouse</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+						   <p>I reinvented the lighthouse. To put it simply: it's a lighthouse for drones.</p>
 
-					      <div class="categories">Web Development</div>			               
+					      <div class="categories">UI/UX Design</div>
 					   </div>
 
 			         <div class="link-box">
@@ -590,8 +589,8 @@
 
 					   <div class="description-box">
 					      <h4>Salad</h4>		      
-					      <p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
-
+						   <p>This Vegan restaurant needed a logo, website, and UX Service design.</p>
+						   
 					      <div class="categories">Branding</div>			               
 					   </div>
 
