--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@
 	                     	<div class="folio-item-cell">
 	                     		<h3 class="folio-title">Lighthouse</h3>	     					    
 		     					    	<span class="folio-types">
-		     					       	  Web Development
+		     					       	  UI/UX Design
 		     					      </span>		     		
 		     					   </div> 	                      	
 	                     </div>                    
@@ -590,7 +590,7 @@
 					   <div class="description-box">
 					      <h4>Salad</h4>		      
 						   <p>This Vegan restaurant needed a logo, website, and UX Service design.</p>
-						   
+
 					      <div class="categories">Branding</div>			               
 					   </div>
 
